# quantix

./: .gitignore  CMakeLists.txt  README.md
components/EPD_2.9in/: CMakeLists.txt  EPD_2.9in.c
components/EPD_2in9/: CMakeLists.txt  EPD_2in9.c  EPD_Test.c  EPD_config.c
components/EPD_2in9/include/: EPD_2in9.h  EPD_Test.h  EPD_config.h  GUI_Paint.h
components/EPD_config/: CMakeLists.txt  EPD_config.c
components/EPD_config/include/: EPD_config.h
components/wifi_manager/: CMakeLists.txt  wifi_manager.c
hardware/quantix_pcb/: quantix_pcb.kicad_prl  quantix_pcb.kicad_pro  quantix_pcb.kicad_sch
main/: Kconfig  main.c
quantix/: .clang-format  font_convertor.py  partitions.csv
quantix-server/: app.py
quantix/components/EC11_driver/: CMakeLists.txt  EC11_driver.c
quantix/components/EC11_driver/include/: EC11_driver.h
quantix/components/EPD_2in9/: CMakeLists.txt  EPD_2in9.c  EPD_config.c  GUI_Paint.c  button.c  wifiqrcode.c
quantix/components/EPD_2in9/Fonts/: font12.c  font12CN.c  font16.c  font24.c  font36.c  fonts.h
quantix/components/EPD_2in9/include/: Debug.h  EPD_2in9.h  GUI_Paint.h  ImageData.h
quantix/components/JWT_storage/: CMakeLists.txt  JWT_storage.c
quantix/components/JWT_storage/include/: JWT_storage.h
quantix/components/wifi_manager/: wifi_manager.c
quantix/components/wifi_manager/include/: wifi_manager.h
quantix/main/: CMakeLists.txt  calendar.c  font_task.c  idf_component.yml  main.c  net_task.c  sleep_manager.c  ui_task.c
quantix/main/include/: calendar.h  font_task.h  net_task.h  sleep_manager.h  task_handles.h  ui_task.h
